Rewrite abstract to actually fit with the contents
Signed-off-by: Toke Høiland-Jørgensen <toke@toke.dk>

--- a/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
+++ b/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
@@ -34,44 +34,30 @@
 
 
 \begin{abstract}
-XDP already offers rich facilities for high performance packet
-processing, and has seen deployment in several production
-systems. However, this does not mean that XDP is a finished system; on
-the contrary, improvements are being added in every release of Linux,
-and rough edges are constantly being filed down. The purpose of this
-talk is to discuss some of these possibilities for future
-improvements, including how to address some of the known limitations
-of the system. We are especially interested in soliciting feedback and
-ideas from the community on the best way forward.
+  XDP continues to see significant development, and is far from a finished
+  system. However, XDP already offers rich facilities for high performance
+  packet processing, and has seen deployment in several production systems.
 
-The issues we are planning to discuss include, but are not limited to:
+  In this work, we provide an overview over some of the ongoing work around XDP,
+  and seek to start a discussion on some of the future challenges that need to
+  be addressed to make sure the XDP ecosystem can continue to flourish.
 
-\begin{itemize}
-\item User experience and debugging tools: How do we make it easier for people
-  who are not familiar with the kernel or XDP to get to grips with the system
-  and be productive when writing XDP programs?
+  The overview of ongoing work focuses on the XDP-related topics being discussed
+  at the LPC networking track in Vancouver, where we provide a short overview of
+  each topic, and refer to the talk for more details. These topics include
+  production deployment reports, using XDP as a backend for the P4 language,
+  zero-copy to userspace with AF\_XDP, and the use of kernel helpers to evolve
+  the XDP feature set. We also include some performance numbers from the
+  academic paper on XDP that we have co-authored with many of the other XDP
+  developers.
 
-\item Driver support: How do we get to full support for XDP in all drivers? Is
-  this even a goal we should be striving for?
-
-\item Performance: At high packet rates, every micro-optimisation counts. Things
-  like inlining function calls in drivers are important, but also batching to
-  amortise fixed costs such as DMA mapping. What are the known bottlenecks, and
-  how do we address them?
-
-\item QoS and rate transitions: How should we do QoS in XDP? In particular, rate
-  transitions (where a faster link feeds into a slower) are currently hard to
-  deal with from XDP, and would benefit from, e.g., Active Queue Management
-  (AQM). Can we adapt some of the AQM and QoS facilities in the regular
-  networking stack to work with XDP? Or should we do something different?
-
-\item Accelerating other parts of the stack: Tom Herbert started the discussion
-  on accelerating transport protocols with XDP back in 2016. How do we make
-  progress on this? Or should we be doing something different? Are there other
-  areas where we can extend XDPs processing model to provide useful
-  accelerations?
-\end{itemize}
-
+  In the forward-looking section, we discuss some future developments that we
+  believe would be beneficial to work on going forward. These topics include NIC
+  memory models and DMA mapping; moving SKB allocation out of drivers; the
+  resource allocation around ndo\_xdp\_xmit; whether it is still realistic to
+  aim for full support of all XDP features in all drivers; and the possibility
+  for adding an XDP egress hook. We are hoping to solicit feedback on these from
+  the wider community during and after LPC.
 \end{abstract}
 
 
