--- a/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
+++ b/conference/LinuxPlumbers2018/lpc18-xdp-future.tex
@@ -68,18 +68,26 @@
 
 We have recently finished writing an academic paper on XDP~\cite{xdp-paper},
 which includes a description of the architecture, and performance comparison
-with DPDK. In the course of that work, we have identified and discussed several
-areas of potential improvements. The purpose of this paper, and the associated
-talk, is to broaden that discussion to the Linux community to solicit feedback,
-and to give a broad overview of ideas and directions of work that is in
-progress, as well as some things that are still at the idea stage.
+with DPDK. As part of that work, we have discussed several areas of potential
+improvements to XDP as a whole. The purpose of this paper, and the associated
+talk, is to broaden that discussion to the wider community, and to solicit
+feedback on some of the future directions we see as beneficial for XDP.
 
-To do this, we include an overview of the other XDP-related talk and topics that
-will be covered at the networking track at LPC '18; those topics will not be
-covered in detail in this work. In addition, we include a couple of ideas that
-are not covered elsewhere, which we will discuss in more detail.
+To provide some context to the discussion of future directions, we first look at
+some of the work that is currently ongoing. We do this in the form of an
+overview of the other XDP-related talk and topics that will be covered at the
+networking track at LPC '18. Those topics will not be covered in detail in this
+work, but we provide a short summary of each, with references to the other
+talks. This is the topic of Section~\ref{sec:current}.
+
+Following this, we discuss some possible future developments that we believe
+will be beneficial to XDP's development going forward. This is the topic of
+Section~\ref{sec:future}, and takes the form of a short summary of each
+development, which should be seen more as an invitation to provide feedback than
+a finished roadmap.
 
 \section{Current developments around XDP}
+\label{sec:current}
 
 Even though XDP is still being very actively developed (as the large number of
 talks at LPC shows), we have already seen examples of it being successfully
@@ -197,7 +205,7 @@ feature of XDP, and we wish to encourage people to think about adding (or
 requesting!) such helpers where it makes sense for their use case.
 
 \section{Future directions for XDP}
-
+\label{sec:future}
 While the previous section covered ongoing work related to XDP, in this section
 we venture a bit further into the future and look at some of the developments we
 believe are necessary for the XDP ecosystem to flourish in the future. As such,
@@ -324,6 +332,22 @@ information about the current state of the TX ring buffer (such as free space),
 which the eBPF program can react appropriately to, for example by signalling
 ingress XDP programs to send traffic another way if the TX ring is full, or by
 implementing AQM-like reactions when TX ring pressure increases.
+
+\section{Conclusion}
+\label{sec:conclusion}
+
+We have provided an overview of the current XDP-related work being discussed at
+LPC '18, which includes production deployment reports, using XDP as a backend
+for the P4 language, zero-copy to userspace with AF\_XDP, and the use of kernel
+helpers to evolve the XDP feature set. We have also discussed some future
+directions for XDP development which we believe will be beneficial to pursue.
+These include NIC memory models and DMA mapping; moving SKB allocation out of
+drivers; the resource allocation around ndo\_xdp\_xmit; whether it is still
+realistic to aim for full support of all XDP features in all drivers; and the
+possibility for adding an XDP egress hook.
+
+It is our hope that this can serve as a useful overview, and as a catalyst for
+discussion of the longer-term future for the XDP system as a whole.
 
 
 \bibliographystyle{ACM-Reference-Format}
