--- a/conference/LinuxPlumbers2018/xdp-future.bib
+++ b/conference/LinuxPlumbers2018/xdp-future.bib
@@ -7,6 +7,7 @@
 }
 
 @Conference{cloudflare-ddos,
+	url = {https://netdevconf.org/2.1/session.html?bertin},
 	booktitle = {NetDev 2.1 - The Technical Conference on Linux Networking},
 	year = {2017},
 	title = {XDP in practice: integrating XDP in our DDoS mitigation pipeline},
