--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -2,19 +2,13 @@
 #+TITLE: XDP - challenges and future work
 #+AUTHOR: Jesper Dangaard Brouer and Toke Høiland-Jørgensen
 #+EMAIL: toke@toke.dk
-#+REVEAL_THEME: moon
+#+REVEAL_THEME: redhat
 #+REVEAL_TRANS: linear
-#+REVEAL_MARGIN: .1
+#+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_CSS: ./reveal.js/css/custom.css
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
-#+REVEAL_DEFAULT_SLIDE_BACKGROUND: ./images/logo.svg
-#+REVEAL_DEFAULT_SLIDE_BACKGROUND_POSITION: bottom left
-#+REVEAL_DEFAULT_SLIDE_BACKGROUND_SIZE: 4em
-#+REVEAL_TITLE_SLIDE_BACKGROUND: ./images/logo.svg
-#+REVEAL_TITLE_SLIDE_BACKGROUND_POSITION: bottom left
-#+REVEAL_TITLE_SLIDE_BACKGROUND_SIZE: 4em
-#+REVEAL_HLEVEL: 1
-#+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil reveal_width:1600 reveal_height:1000 ^:nil tags:nil toc:nil num:nil
+#+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
+#+OPTIONS: reveal_width:1600 reveal_height:900 ^:nil tags:nil toc:nil num:nil
 
 This presentation will be given at Linux Plumbers Conference 2018 Networking
 Track.
