--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -342,7 +342,8 @@ IP-routing good example of XDP acceleration
 The topic and FIB-lookup helper covered in David Ahern's talk:
  - [[http://vger.kernel.org/lpc-networking.html#session-1][Leveraging Kernel Tables with XDP]]
 
-** Topic: XDP as a building block
+
+* Topic: XDP as a building block
 
    If it is not clear to people, explain that XDP is core kernel
    facility, that other Open Source projects need to pickup, use and
@@ -361,7 +362,7 @@ should be able to write a data-plane in domain-specific language like P4. And
 to use load this in a XDP hook, you need to write a new backend to your P4
 compiler that generate the XDP/eBPF code.
 
-** Slide: XDP as a building block                                   :export:
+* Slide: XDP as a building block                                   :export:
 
 XDP is a core kernel layer building block
  - Open Source projects should build and innovate on top
