--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -416,12 +416,14 @@ XDP usual performance benefit comes from in-kernel processing via BPF
  - (avoiding context switch to userspace)
 
 AF_XDP is for faster raw packet delivery into userspace
- - Hooking into XDP, provides packet filter flexibility
+ - Unlike tcpdump, as it owns/steals the packet
+   * (Might want to invent/allow a copy and XDP_PASS mode)
+ - Hooking into XDP provides packet filter flexibility
  - Performance tricks:
    - Preallocated userspace memory, give it to kernel for NIC RX-rings
    - NetChannel like SPSC queues between kernel and userspace
- - Unlike tcpdump, as it owns/steals the packet
-   * Might want to invent/allow a copy and XDP_PASS mode.
+
+** Slide: AF_XDP talks
 
 Two talks about AF_XDP on schedule:
  - (AF_XDP) The Path to DPDK Speeds for AF_XDP
