--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -7,7 +7,8 @@
 #+REVEAL_MARGIN: 0
 #+REVEAL_EXTRA_JS: { src: './reveal.js/js/custom.js'}
 #+OPTIONS: reveal_center:nil reveal_control:t reveal_history:nil
-#+OPTIONS: reveal_width:1600 reveal_height:900 ^:nil tags:nil toc:nil num:nil
+#+OPTIONS: reveal_width:1600 reveal_height:900
+#+OPTIONS: ^:nil tags:nil toc:nil num:nil ':t
 
 This presentation will be given at Linux Plumbers Conference 2018 Networking
 Track.
