--- a/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
+++ b/conference/LinuxPlumbers2018/presentation-lpc2018-xdp-future.org
@@ -494,7 +494,7 @@ consumes HW resources.  Given the TX queue per CPU core assumption, this makes
 it problematic on systems with many CPU cores. E.g. it was discovered the ixgbe
 driver cannot load XDP on systems with more than 96 CPU cores.
 
-* Slide: Controlling resources for ndo_xdp_xmit                    :export:
+* Slide: Resources for ndo_xdp_xmit                                  :export:
 
 Redirecting XDP frame out another net_device, call ndo_xdp_xmit
  - But egress net_device don't default alloc XDP-TX resouces
@@ -504,7 +504,7 @@ Redirecting XDP frame out another net_device, call ndo_xdp_xmit
 We need proper API for enabling XDP-TX resources on egress net_device
  - Current hack, load dummy XDP prog on egress dev
  - Would be natural to, alloc TX resources when dev added to DEVMAP
- - But how to handle non-map redirect variant?
+   - But how to handle non-map redirect variant?
 
 This implicit XDP-TX resources allocation when loading XDP
  - is wasting HW resources when XDP doesn't need ndo_xdp_xmit
